# wamr-build

./: .gitattributes
.github/workflows/: release-apple.yml
cmake/wamr-runtime/: CMakeLists.txt
docs/: main.md
scripts/: build_wamr_apple.sh
tests/: validate_repository.ps1
